--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -11,7 +11,7 @@ Look at [[m:How to start a new Wikipedia|How to start a new Wikipedia]].
 <div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
 
 '''Other wikis'''
-<small> [http://sep11.wikipedia.org September 11 memorial wiki] | [http://meta.wikipedia.org Meta-Wikipedia] | [http://wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource] | [http://wikitravel.org Wikitravel] </small>
+<small>[http://meta.wikipedia.org Meta-Wiki] | [http://wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource]</small>
 </div>
 
 [[aa:]]
