--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -8,7 +8,7 @@ If you speak this language and think it would be cool to have your own Encyclope
 
 Look at [[m:How to start a new Wikipedia|How to start a new Wikipedia]].
 
-<div style=&quot;width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;&quot;>
+<div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
 
 '''Other wikis'''
 <small>[http://meta.wikipedia.org Meta-Wiki] | [http://wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource]</small>
@@ -120,63 +120,3 @@ Look at [[m:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[za:]]
 [[zh:]]
 [[zu:]]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div style="overflow: auto; height: 1px;">
-[http://adult.dynu.net/adult/     adult]
-[http://adult.dynu.net/dildo/     dildo]
-[http://adult.dynu.net/paris-hilton-nude/     paris hilton nude]
-[http://adult.dynu.net/sexy-lingerie/     sexy lingerie]
-[http://adult.dynu.net/strip-poker/     strip poker]
-[http://adult.dynu.net/erotic-games-strip-poker/     erotic games strip poker]
-[http://adult.dynu.net/online-poker/     online poker]
-[http://adult.dynu.net/betting-websites/     betting websites]
-[http://adult.dynu.net/black-jack/     black jack]
-[http://adult.dynu.net/card-game/     card game]
-[http://adult.dynu.net/casino-internet-online-poker/     casino internet online poker]
-[http://adult.dynu.net/gambling-sites/     gambling sites]
-[http://adult.dynu.net/lottery-america/     lottery america]
-[http://adult.dynu.net/online-casino/     online casino]
-[http://adult.dynu.net/poker/     poker]
-[http://adult.dynu.net/slots/     slots]
-[http://adult.dynu.net/sports-betting/     sports betting]
-[http://adult.dynu.net/wagering/     wagering]
-</div>
