*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -8,7 +8,7 @@ If you speak this language and think it would be cool to have your own Encyclope
 
 Look at [[m:How to start a new Wikipedia|How to start a new Wikipedia]].
 
-<div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
+<div style=&quot;width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;&quot;>
 
 '''Other wikis'''
 <small>[http://meta.wikipedia.org Meta-Wiki] | [http://wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource]</small>
@@ -120,3 +120,4 @@ Look at [[m:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[za:]]
 [[zh:]]
 [[zu:]]
+[http://northwestairlines.bravehost.com Northwest Airlines]
