dz at discovery zone...

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -6,7 +6,7 @@ If you speak this language and think it would be cool to have your own Encyclope
 
 '''''Go ahead. Translate this page and start working on your Encyclopedia.'''''
 
-Look at [[m:How to start a new Wikipedia|How to start a new Wikipedia]].
+Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 
 <div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
 
