*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -8,23 +8,8 @@
 </center>
 </div>
 ==This subdomain is reserved for the creation of a Wikipedia in the <b>[[:en:Dzongkha language|Dzongkha language]]</b>==
-[http://www.dusler-sokagi.com Aşk]
-[http://www.dusler-sokagi.com Arkadaşlık]
-[http://www.dusler-sokagi.com Dostluk]
-[http://www.dusler-sokagi.com Şiirler]
-[http://www.dusler-sokagi.com sevgili]
-[http://www.avcilarmekani.com Av Videoları]
-[http://www.avcilarmekani.com Av Köpekleri]
-[http://www.avcilarmekani.com Satılık Av Tüfekleri]
-[http://www.avcilarmekani.com Balık Avı]
-[http://www.avcilarmekani.com Tavşan Avı]
-[http://www.avcilarmekani.com Domuz Avı]
-[http://www.avcilarmekani.com Av Oyunları]
-[http://www.dilaylam.com Aşk]
-[http://www.dilaylam.com Arkadaşlık]
-[http://www.dilaylam.com Dostluk]
-[http://www.dilaylam.com Şiirler]
-[http://www.dilaylam.com sevgili]
+{{delete}}
+
 
 If you speak this language and think it would be cool to have your own Encyclopedia then '''you''' can make it.
 
