--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,4 +1,4 @@
-==This subdomain is reserved for the creation of a Wikipedia in the <b>[[:en:Dzongkha language|Dzongkha language]]</b>==
+==This subdomain is reserved for the creation of a Wikipedia in the <b>[[:en:Dzongkha language|Dzukish language (Dzūkų kalba)]]</b>==
 
 If you speak this language and think it would be cool to have your own Encyclopedia then '''you''' can make it.
 
