/* Welcome to Retardpedia!</b> */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,3 +1,3 @@
 ==Welcome to Retardpedia!</b>==
 
-Welcome to [[Retardpedia]], the encyclopedia for retards, by retards. We have {{NUMBEROFARTICLES}) retarded articles, probly written by retards.
+Welcome to [[Retardpedia]], the encyclopedia for retards, by retards. We have {{NUMBEROFARTICLES}} retarded articles, probly written by retards.
