*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -19,43 +19,60 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[als:]]
 [[ar:]]
 [[de:]]
-[[en:]]
 [[as:]]
 [[ast:]] <!-- missing WikiMedia 1.3 support -->
 [[ay:]]
 [[az:]]
+[[ba:]]
 [[be:]]
 [[bg:]]
 [[bn:]]
 [[bo:]]
+[[bpy:]]
 [[bs:]]
-[[cs:]]
+[[ca:]]
+[[ce:]]
+[[ch:]]
 [[co:]]
+[[cr:]]
 [[cs:]]
+[[cu:]]
+[[cv:]]
 [[cy:]]
 [[da:]]
 [[el:]]
+[[en:]]
 [[eo:]]
 [[es:]]
 [[et:]]
 [[eu:]]
 [[fa:]]
 [[fi:]]
+[[fo:]]
 [[fr:]]
+[[frp:]]
 [[fy:]]
 [[ga:]]
+[[gd:]]
 [[gl:]]
 [[gn:]]
 [[gu:]]
+[[gv:]]
 [[he:]]
 [[hi:]]
 [[hr:]]
+[[hsb:]]
+[[ht:]]
+[[hu:]]
 [[hy:]]
 [[ia:]]
 [[id:]]
+[[ie:]]
 [[is:]]
 [[it:]]
+[[iu:]]
 [[ja:]]
+[[jv:]]
 [[ka:]]
 [[kk:]]
 [[km:]]
@@ -63,13 +80,15 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ko:]]
 [[ks:]]
 [[ku:]]
+[[kw:]]
 [[ky:]]
 [[la:]]
+[[lad:]]
+[[lb:]]
 [[ln:]] <!-- missing WikiMedia 1.3 support -->
 [[lo:]]
 [[lt:]]
 [[lv:]]
-[[hu:]]
 [[mi:]]
 [[mk:]]
 [[ml:]]
@@ -86,7 +105,9 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[no:]]
 [[oc:]]
 [[om:]]
+[[os:]]
 [[pa:]]
+[[pdc:]]
 [[pl:]]
 [[ps:]]
 [[pt:]]
@@ -94,11 +115,16 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ro:]]
 [[ru:]]
 [[sa:]]
+[[sc:]]
+[[scn:]]
+[[sco:]]
+[[se:]]
 [[si:]]
 [[sk:]]
 [[sl:]]
 [[sq:]]
 [[sr:]]
+[[su:]]
 [[sv:]]
 [[sw:]]
 [[ta:]]
