*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -15,17 +15,27 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 </div>
 
 [[aa:]]
+[[ab:]]
 [[af:]]
+[[ak:]]
 [[als:]]
+[[am:]]
+[[an:]]
+[[ang:]]
 [[ar:]]
-[[de:]]
+[[arc:]]
 [[as:]]
 [[ast:]] <!-- missing WikiMedia 1.3 support -->
+[[av:]]
 [[ay:]]
 [[az:]]
 [[ba:]]
+[[bar:]]
+[[bat-smg:]]
 [[be:]]
 [[bg:]]
+[[bi:]]
+[[bm:]]
 [[bn:]]
 [[bo:]]
 [[bpy:]]
@@ -33,13 +43,19 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ca:]]
 [[ce:]]
 [[ch:]]
+[[chr:]]
+[[chy:]]
 [[co:]]
 [[cr:]]
 [[cs:]]
+[[csb:]]
 [[cu:]]
 [[cv:]]
 [[cy:]]
 [[da:]]
+[[de:]]
+[[diq:]]
+[[dv:]]
 [[el:]]
 [[en:]]
 [[eo:]]
@@ -48,14 +64,18 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[eu:]]
 [[fa:]]
 [[fi:]]
+[[fiu-vro:]]
+[[fj:]]
 [[fo:]]
 [[fr:]]
 [[frp:]]
+[[fur:]]
 [[fy:]]
 [[ga:]]
 [[gd:]]
 [[gl:]]
 [[gn:]]
+[[got:]]
 [[gu:]]
 [[gv:]]
 [[he:]]
@@ -65,65 +85,98 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ht:]]
 [[hu:]]
 [[hy:]]
+[[hz:]]
 [[ia:]]
 [[id:]]
 [[ie:]]
+[[ig:]]
+[[ii:]]
+[[ilo:]]
+[[io:]]
 [[is:]]
 [[it:]]
 [[iu:]]
 [[ja:]]
+[[jbo:]]
 [[jv:]]
 [[ka:]]
+[[kg:]]
+[[ki:]]
 [[kk:]]
+[[kl:]]
 [[km:]]
 [[kn:]]
 [[ko:]]
 [[ks:]]
+[[ksh:]]
 [[ku:]]
 [[kw:]]
 [[ky:]]
 [[la:]]
 [[lad:]]
 [[lb:]]
+[[lmo:]]
 [[ln:]] <!-- missing WikiMedia 1.3 support -->
 [[lo:]]
 [[lt:]]
 [[lv:]]
+[[map-bms:]]
+[[mg:]]
 [[mi:]]
 [[mk:]]
 [[ml:]]
 [[mn:]]
+[[mo:]]
 [[mr:]]
 [[ms:]]
 [[mt:]] <!-- missing WikiMedia 1.3 support -->
 [[my:]]
 [[na:]]
 [[nah:]]
+[[nap:]]
 [[nds:]]
+[[nds-nl:]]
 [[ne:]]
+[[new:]]
 [[nl:]]
+[[nn:]]
 [[no:]]
+[[nrm:]]
+[[nv:]]
 [[oc:]]
 [[om:]]
+[[or:]]
 [[os:]]
 [[pa:]]
+[[pam:]]
 [[pdc:]]
 [[pl:]]
+[[pms:]]
 [[ps:]]
 [[pt:]]
 [[qu:]]
+[[rm:]]
 [[ro:]]
+[[roa-rup:]]
 [[ru:]]
+[[ru-sib:]]
 [[sa:]]
 [[sc:]]
 [[scn:]]
 [[sco:]]
+[[sd:]]
 [[se:]]
+[[sh:]]
 [[si:]]
+[[simple:]]
 [[sk:]]
 [[sl:]]
+[[sn:]]
+[[so:]]
 [[sq:]]
 [[sr:]]
+[[ss:]]
+[[st:]]
 [[su:]]
 [[sv:]]
 [[sw:]]
@@ -131,18 +184,32 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[te:]]
 [[tg:]]
 [[th:]]
+[[ti:]]
 [[tk:]]
 [[tl:]]
+[[to:]]
 [[tr:]]
+[[ts:]]
 [[tt:]]
+[[ty:]]
 [[ug:]]
 [[uk:]]
 [[ur:]]
 [[uz:]]
+[[ve:]]
+[[vec:]]
 [[vi:]]
 [[vo:]]
+[[wa:]]
+[[war:]]
+[[wo:]]
+[[wuu:]]
 [[xh:]]
+[[yi:]]
 [[yo:]]
 [[za:]]
 [[zh:]]
+[[zh-classical:]]
+[[zh-min-nan:]]
+[[zh-yue:]]
 [[zu:]]
