--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,6 +1,6 @@
 ==This subdomain is reserved for the creation of a Wikipedia in the <b>[[:en:Dzongkha language|Dzongkha language]]</b>==
 
-If you speak this language or dzukish and think it would be cool to have your own Encyclopedia then '''you''' can make it.
+If you speak Dzongkha and think it would be cool to have your own Encyclopedia then '''you''' can make it.
 
 {{NUMBEROFARTICLES}} articles currently exist.
 
