*Empty MediaWiki Message*

--- a/ཁང་ཆེས་.mw
+++ b/ཁང་ཆེས་.mw
@@ -1,1 +1,1 @@
-ཤིང་དང་ ལྕགས་ཀྱིས་ བཟོ་བཟོ་བའི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང་།
+ཤིང་དང་ ལྕགས་ཀྱིས་ བཟོ་བཟོ་བའི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང་།[[Image:khangche.jpg]]
