*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -34,15 +34,23 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[bat-smg:]]
 [[be:]]
 [[bg:]]
+[[bh:]]
 [[bi:]]
 [[bm:]]
 [[bn:]]
 [[bo:]]
 [[bpy:]]
+[[br:]]
 [[bs:]]
+[[bug:]]
+[[bxr:]]
 [[ca:]]
+[[cbk-zam:]]
+[[cdo:]]
 [[ce:]]
+[[ceb:]]
 [[ch:]]
+[[cho:]]
 [[chr:]]
 [[chy:]]
 [[co:]]
@@ -56,13 +64,16 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[de:]]
 [[diq:]]
 [[dv:]]
+[[ee:]]
 [[el:]]
+[[eml:]]
 [[en:]]
 [[eo:]]
 [[es:]]
 [[et:]]
 [[eu:]]
 [[fa:]]
+[[ff:]]
 [[fi:]]
 [[fiu-vro:]]
 [[fj:]]
@@ -74,12 +85,15 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ga:]]
 [[gd:]]
 [[gl:]]
+[[glk:]]
 [[gn:]]
 [[got:]]
 [[gu:]]
 [[gv:]]
+[[ha:]]
 [[he:]]
 [[hi:]]
+[[ho:]]
 [[hr:]]
 [[hsb:]]
 [[ht:]]
@@ -91,6 +105,7 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ie:]]
 [[ig:]]
 [[ii:]]
+[[ik:]]
 [[ilo:]]
 [[io:]]
 [[is:]]
@@ -102,19 +117,25 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ka:]]
 [[kg:]]
 [[ki:]]
+[[kj:]]
 [[kk:]]
 [[kl:]]
 [[km:]]
 [[kn:]]
 [[ko:]]
+[[kr:]]
 [[ks:]]
 [[ksh:]]
 [[ku:]]
+[[kv:]]
 [[kw:]]
 [[ky:]]
 [[la:]]
 [[lad:]]
 [[lb:]]
+[[lg:]]
+[[li:]]
+[[lij:]]
 [[lmo:]]
 [[ln:]] <!-- missing WikiMedia 1.3 support -->
 [[lo:]]
@@ -122,6 +143,7 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[lv:]]
 [[map-bms:]]
 [[mg:]]
+[[mh:]]
 [[mi:]]
 [[mk:]]
 [[ml:]]
@@ -130,7 +152,9 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[mr:]]
 [[ms:]]
 [[mt:]] <!-- missing WikiMedia 1.3 support -->
+[[mus:]]
 [[my:]]
+[[mzn:]]
 [[na:]]
 [[nah:]]
 [[nap:]]
@@ -138,9 +162,11 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[nds-nl:]]
 [[ne:]]
 [[new:]]
+[[ng:]]
 [[nl:]]
 [[nn:]]
 [[no:]]
+[[nov:]]
 [[nrm:]]
 [[nv:]]
 [[oc:]]
@@ -148,7 +174,9 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[or:]]
 [[os:]]
 [[pa:]]
+[[pag:]]
 [[pam:]]
+[[pap:]]
 [[pdc:]]
 [[pl:]]
 [[pms:]]
@@ -156,21 +184,27 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[pt:]]
 [[qu:]]
 [[rm:]]
+[[rmy:]]
+[[rn:]]
 [[ro:]]
 [[roa-rup:]]
+[[roa-tara:]]
 [[ru:]]
 [[ru-sib:]]
+[[rw:]]
 [[sa:]]
 [[sc:]]
 [[scn:]]
 [[sco:]]
 [[sd:]]
 [[se:]]
+[[sg:]]
 [[sh:]]
 [[si:]]
 [[simple:]]
 [[sk:]]
 [[sl:]]
+[[sm:]]
 [[sn:]]
 [[so:]]
 [[sq:]]
@@ -182,16 +216,24 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[sw:]]
 [[ta:]]
 [[te:]]
+[[tet:]]
 [[tg:]]
 [[th:]]
 [[ti:]]
 [[tk:]]
 [[tl:]]
+[[tlh:]]
+[[tn:]]
 [[to:]]
+[[tokipona:]]
+[[tpi:]]
 [[tr:]]
 [[ts:]]
 [[tt:]]
+[[tum:]]
+[[tw:]]
 [[ty:]]
+[[udm:]]
 [[ug:]]
 [[uk:]]
 [[ur:]]
@@ -199,15 +241,18 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[ve:]]
 [[vec:]]
 [[vi:]]
+[[vls:]]
 [[vo:]]
 [[wa:]]
 [[war:]]
 [[wo:]]
 [[wuu:]]
+[[xal:]]
 [[xh:]]
 [[yi:]]
 [[yo:]]
 [[za:]]
+[[zea:]]
 [[zh:]]
 [[zh-classical:]]
 [[zh-min-nan:]]
