*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -11,7 +11,7 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 <div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
 
 '''Other wikis'''
-<small>[http://meta.wikipedia.org Meta-Wiki] | [http://wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource]</small>
+<small>[http://meta.wikipedia.org Meta-Wiki] | [http://dz.wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource]</small>
 </div>
 
 [[aa:]]
@@ -133,6 +133,7 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[la:]]
 [[lad:]]
 [[lb:]]
+[[lbe:]]
 [[lg:]]
 [[li:]]
 [[lij:]]
@@ -178,6 +179,8 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[pam:]]
 [[pap:]]
 [[pdc:]]
+[[pi:]]
+[[pih:]]
 [[pl:]]
 [[pms:]]
 [[ps:]]
