link to special:allpages

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -2,7 +2,7 @@
 
 If you speak Dzongkha and think it would be cool to have your own Encyclopedia then '''you''' can make it.
 
-{{NUMBEROFARTICLES}} articles currently exist.
+{{NUMBEROFARTICLES}} [[Special:Allpages|articles]] currently exist.
 
 '''''Go ahead. Translate this page and start working on your Encyclopedia.'''''
 
