*Empty MediaWiki Message*

--- a/ཊེམ་པེལེཊི:བཏོན་གཏང་.mw
+++ b/ཊེམ་པེལེཊི:བཏོན་གཏང་.mw
@@ -1,6 +1,6 @@
 <div name="Deletion notice" class="boilerplate metadata" id="delete" style="background-color: #fee; margin: 0 1em; padding: 0 10px; border: 1px solid #aaa;">
 '''This {{{2|page}}} is a [[:Category:Candidates for speedy deletion|candidate for speedy deletion]][[Template:Delete|.]]'''
-As Reason was given: "''{{{1}}}''"
+As Reason was given: "''{{{1|no reason given}}}''"
 
 If you disagree with its speedy deletion, please explain why on this page.
 
