*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -33,6 +33,7 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[bar:]]
 [[bat-smg:]]
 [[be:]]
+[[be-x-old:]]
 [[bg:]]
 [[bh:]]
 [[bi:]]
@@ -91,6 +92,8 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[gu:]]
 [[gv:]]
 [[ha:]]
+[[hak:]]
+[[haw:]]
 [[he:]]
 [[hi:]]
 [[ho:]]
