--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -118,6 +118,7 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 [[jbo:]]
 [[jv:]]
 [[ka:]]
+[[kab:]]
 [[kg:]]
 [[ki:]]
 [[kj:]]
