robot  Adding: am, ar, bg, cy, da, de, eo, es, et, fi, fr, frp, he, hi, hy, id, io, it, ja, ko, lt, lv, nl, nn, no, nov, pl, pt, ru, simple, sk, sv, sw, ta, tr, vo, zh

--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -1,2 +1,40 @@
 ཐིམ་ཕུ་
+
+[[am:ጢምጱ]]
+[[ar:تيمفو]]
+[[bg:Тхимпху]]
+[[cy:Thimphu]]
+[[da:Thimphu]]
+[[de:Thimphu]]
 [[en:Thimphu]]
+[[eo:Timbuo]]
+[[es:Timbu]]
+[[et:Thimphu]]
+[[fi:Thimphu]]
+[[fr:Thimphou]]
+[[frp:Thimphu]]
+[[he:ת'ימפו]]
+[[hi:थिम्फू]]
+[[hy:Թիմփու]]
+[[id:Thimphu]]
+[[io:Thimphu]]
+[[it:Thimphu]]
+[[ja:ティンプー]]
+[[ko:팀부]]
+[[lt:Timpu]]
+[[lv:Timpu]]
+[[nl:Thimphu (stad)]]
+[[nn:Thimphu]]
+[[no:Thimpu]]
+[[nov:Timpu]]
+[[pl:Thimphu]]
+[[pt:Thimbu]]
+[[ru:Тхимпху]]
+[[simple:Thimphu]]
+[[sk:Thimphu]]
+[[sv:Thimphu]]
+[[sw:Thimphu]]
+[[ta:திம்பு]]
+[[tr:Thimphu]]
+[[vo:Thimphu]]
+[[zh:廷布]]
