robot  Adding: [[vo:Nula-Seleäns]]

--- a/ནིའུ་ཛི་ལེནཌ་.mw
+++ b/ནིའུ་ཛི་ལེནཌ་.mw
@@ -91,6 +91,7 @@
 [[uk:Нова Зеландія]]
 [[uz:Yangi Zelandiya]]
 [[vi:New Zealand]]
+[[vo:Nula-Seleäns]]
 [[wa:Nouve Zelande]]
 [[yi:ניו זילנד]]
 [[zh:新西兰]]
