*Empty MediaWiki Message*

--- a/ཨེན་ཊཱག་ཊི་ཀ་.mw
+++ b/ཨེན་ཊཱག་ཊི་ཀ་.mw
@@ -1,4 +1,6 @@
-
+[[Image:Antarctica 6400px from Blue Marble.jpg|right|thumb|ཨེན་ཊཱག་ཊི་ཀ་]]
 '''ཨེན་ཊཱག་ཊི་ཀ་'''
 
+----
+*[[ཨཕ་རི་ཀ་ ]]
 [[en:Antarctica]]
