*Empty MediaWiki Message*

--- a/ཀེ་ན་ཌ་.mw
+++ b/ཀེ་ན་ཌ་.mw
@@ -1,4 +1,4 @@
-[[Canada-census layout.png|right|thumb|ཀེ་ན་ཌ་]]
+[[Image:Canada-census layout.png|right|thumb|ཀེ་ན་ཌ་]]
 '''ཀེ་ན་ཌ་''' 
 
 [[en:Canada]]
