*Empty MediaWiki Message*

--- a/བཱརཱ་ཛིལ་.mw
+++ b/བཱརཱ་ཛིལ་.mw
@@ -1,5 +1,7 @@
 [[Image:Flag of Brazil.svg|right|thumb]]
+[[Image:Amazon.A2002182.1405.1km.jpg|right|thumb|བཱརཱ་ཛིལ་]]
 '''བཱརཱ་ཛིལ་'''
 
-
+----
+*[[རྒྱ་མི་ ]]
 [[en:Brazil]]
