*Empty MediaWiki Message*

--- a/ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ.mw
+++ b/ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ.mw
@@ -1,5 +1,5 @@
 [[Image:Location UK EU Europe.png|right|thumb|ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ་]]
-[[Image:Flag of the United Kingdom.svg]]
+[[Image:Flag of the United Kingdom.svg|right|thumb]]
 '''ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ་'''
 
 ----
