*Empty MediaWiki Message*

--- a/གྲྀས.mw
+++ b/གྲྀས.mw
@@ -1,5 +1,5 @@
 [[Image:Brainsik-ermoupoli.jpg|right|thumb|གིརིསི་]]
-[[Image:Flag of Greece.svg]]
+[[Image:Flag of Greece.svg|right|thumb]]
 '''གིརིསི་'''
 
 ----
