*Empty MediaWiki Message*

--- a/ནིའུ་ཛི་ལེནཌ་.mw
+++ b/ནིའུ་ཛི་ལེནཌ་.mw
@@ -1,4 +1,4 @@
-[[Image:Satellite image of New Zealand in December 2002.jpg|right|thumb|300px|ནིའུ་ཛི་ལེནཌ]]
+[[Image:Satellite image of New Zealand in December 2002.jpg|right|thumb|ནིའུ་ཛི་ལེནཌ་]]
 '''ནིའུ་ཛི་ལེནཌ་''' 
 
 ----
