robot  Adding: [[io:Moblo]], [[is:Húsgagn]], [[uk:Меблі]]

--- a/ཁང་ཆེས་.mw
+++ b/ཁང་ཆེས་.mw
@@ -14,6 +14,8 @@
 [[fi:Huonekalu]]
 [[fr:Meuble]]
 [[gd:Àirneis]]
+[[io:Moblo]]
+[[is:Húsgagn]]
 [[it:Arredamento]]
 [[ja:家具]]
 [[mk:Мебел]]
@@ -27,4 +29,5 @@
 [[sl:Pohištvo]]
 [[sv:Möbler]]
 [[tr:Mobilya]]
+[[uk:Меблі]]
 [[zh:家具]]
