*Empty MediaWiki Message*

--- a/པོར་ཅུ་གལ་.mw
+++ b/པོར་ཅུ་གལ་.mw
@@ -1,4 +1,4 @@
-[[Image:Location Portugal EU Europe.png|right|thumb|པོར་ཅུ་གལ་]]
+[[Image:Location Portugal EU Europe.png|right|thumb|250px|པོར་ཅུ་གལ་]]
 [[Image:Flag of Portugal.svg|right|thumb]]
 '''པོར་ཅུ་གལ་'''
 
