--- a/ཨའིརི་ལེནཌ་.mw
+++ b/ཨའིརི་ལེནཌ་.mw
@@ -1,4 +1,4 @@
-[[Image:Ireland.A2003004.jpg|right|thumb|250px|ནོ་ཝེ་]]
+[[Image:Ireland.A2003004.jpg|right|thumb|250px|ཨའིརི་ལེནཌ་]]
 [[Image:Flag of Ireland.svg|right|thumb|]]
 [[Image:Red deer.jpg|right|thumb|]]
 '''ཨའིརི་ལེནཌ་'''
