*Empty MediaWiki Message*

--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -1,5 +1,8 @@
-ཐིམ་ཕུ་
+[[Image:Tashichoedzong-Bhutan-2001.JPG|right|thumb|250px|ཐིམ་ཕུ་]]
+[[Image:ThimphuView.jpg|right|thumb|240px]]
+'''ཐིམ་ཕུ་''' 
 
+*[[འབྲུག་ཡུལ་ ]]
 [[am:ጢምጱ]]
 [[ar:تيمفو]]
 [[bg:Тхимпху]]
