--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -2,6 +2,16 @@
 [[Image:ThimphuView.jpg|right|thumb|240px]]
 '''ཐིམ་ཕུ་''' 
 
+*[[ཐིམ་ཕུ་]]  
+*[[ཕུན་ཚོགས་གླིང་]]
+*[[སྤུ་ན་ཁ་]] 
+*[[བསམ་གྲུབ་ལྗོངས་མཁར་]] 
+*[[གསར་སྤང་]] 
+*[[སྤ་རོ་]] 
+*[[བཀྲིས་སྒང་]] 
+*[[དབང་འདུས་ཕོ་བྲང་]] 
+*[[ཏ་ག་རྫོང་]] 
+*[[ཀྲོང་གསར་]] 
 *[[འབྲུག་ཡུལ་ ]]
 [[am:ጢምጱ]]
 [[ar:تيمفو]]
