--- a/ཤྲཱྀ་ལངཀ་.mw
+++ b/ཤྲཱྀ་ལངཀ་.mw
@@ -1,4 +1,4 @@
-[[Image:Srilankamountainforest.jpg|right|thumb|ཤྲཱྀ་ལངཀ་]]
+[[Image:LocationSriLanka.png|right|thumb|ཤྲཱྀ་ལངཀ་]]
 '''ཤྲཱྀ་ལངཀ་''' 
 
 ----
