*Empty MediaWiki Message*

--- a/བངྒ་ལ་དེཤ.mw
+++ b/བངྒ་ལ་དེཤ.mw
@@ -1,4 +1,4 @@
-[[Image:LocationSriLanka.png|right|thumb|280px|བངྒ་ལ་དེཤ་]]
+[[Image:LocationBangladesh.svg|right|thumb|280px|བངྒ་ལ་དེཤ་]]
 '''བངྒ་ལ་དེཤ་''' 
 
 ----
