--- a/ཀུ་ཝེཊ་.mw
+++ b/ཀུ་ཝེཊ་.mw
@@ -1,4 +1,4 @@
-[[Image:LocationIsrael.svg|right|thumb|280px|ཀུ་ཝེཊ་]]
+[[Image:LocationKuwait.svg|right|thumb|280px|ཀུ་ཝེཊ་]]
 '''ཀུ་ཝེཊ་''' 
 
 ----
