--- a/བཧ་རེན་.mw
+++ b/བཧ་རེན་.mw
@@ -1,4 +1,4 @@
-[[Image:LocationQatar.png|right|thumb|280px|བཧ་རེན་]]
+[[Image:LocationBahrain.png|right|thumb|280px|བཧ་རེན་]]
 '''བཧ་རེན་''' 
 
 ----
