robot  Adding: [[ca:Thimphu]], [[is:Timfú]]

--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -13,9 +13,11 @@
 *[[ཏ་ག་རྫོང་]] 
 *[[ཀྲོང་གསར་]] 
 *[[འབྲུག་ཡུལ་ ]]
+
 [[am:ጢምጱ]]
 [[ar:تيمفو]]
 [[bg:Тхимпху]]
+[[ca:Thimphu]]
 [[cs:Thimphu]]
 [[cy:Thimphu]]
 [[da:Thimphu]]
@@ -32,6 +34,7 @@
 [[hy:Թիմփու]]
 [[id:Thimphu]]
 [[io:Thimphu]]
+[[is:Timfú]]
 [[it:Thimphu]]
 [[ja:ティンプー]]
 [[ko:팀부]]
