robot  Adding: [[qu:Musuq Silanda]], [[to:Nuʻu Sila]] Modifying: [[yi:ניו זילאנד]]

--- a/ནིའུ་ཛི་ལེནཌ་.mw
+++ b/ནིའུ་ཛི་ལེནཌ་.mw
@@ -3,6 +3,7 @@
 
 ----
 *[[ནོ་ཝེ་ ]]
+
 [[af:Nieu-Seeland]]
 [[als:Neuseeland]]
 [[an:Nueba Zelanda]]
@@ -73,6 +74,7 @@
 [[pl:Nowa Zelandia]]
 [[ps:نوی زيلانډ]]
 [[pt:Nova Zelândia]]
+[[qu:Musuq Silanda]]
 [[ro:Noua Zeelandă]]
 [[ru:Новая Зеландия]]
 [[sco:New Zealand]]
@@ -89,6 +91,7 @@
 [[ta:நியூசிலாந்து]]
 [[th:ประเทศนิวซีแลนด์]]
 [[tl:New Zealand]]
+[[to:Nuʻu Sila]]
 [[tpi:Niusilan]]
 [[tr:Yeni Zelanda Cumhuriyeti]]
 [[uk:Нова Зеландія]]
@@ -96,7 +99,7 @@
 [[vi:New Zealand]]
 [[vo:Nula-Seleäns]]
 [[wa:Nouve Zelande]]
-[[yi:ניו זיילאנד]]
+[[yi:ניו זילאנד]]
 [[zh:新西兰]]
 [[zh-min-nan:Sin Jia̍t-lân-jia]]
 [[zh-yue:紐西蘭]]
