robot  Adding: [[hr:Thimphu]], [[ht:Timfou]], [[sr:Тимбу]]

--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -31,6 +31,8 @@
 [[frp:Thimphu]]
 [[he:ת'ימפו]]
 [[hi:थिम्फू]]
+[[hr:Thimphu]]
+[[ht:Timfou]]
 [[hy:Թիմփու]]
 [[id:Thimphu]]
 [[io:Thimphu]]
@@ -49,6 +51,7 @@
 [[ru:Тхимпху]]
 [[simple:Thimphu]]
 [[sk:Thimphu]]
+[[sr:Тимбу]]
 [[sv:Thimphu]]
 [[sw:Thimphu]]
 [[ta:திம்பு]]
