--- a/ཀམ་བོ་ཌི་ཡ་.mw
+++ b/ཀམ་བོ་ཌི་ཡ་.mw
@@ -26,7 +26,7 @@
 [[el:Καμπότζη]]
 [[en:Cambodia]]
 [[eo:Kamboĝo]]
-[[es:Reino de Camboya]]
+[[es:Camboya]]
 [[et:Kambodža]]
 [[eu:Kanputxea]]
 [[fa:کامبوج]]
