--- a/ཡུ་ནའིཊེཊ་སི་ཊེས.mw
+++ b/ཡུ་ནའིཊེཊ་སི་ཊེས.mw
@@ -4,6 +4,9 @@
 ----
 *[[ཀེ་ན་ཌ་ ]]
 
+
+* [http://www.wikimages.org/United_States.htm United States] - from Wikimages - Wikipedia and Google Information and Images Collection.
+
 [[af:Verenigde State]]
 [[als:USA]]
 [[am:አሜሪካ]]
