--- a/མ་ལེ་ཤི་ཡ་.mw
+++ b/མ་ལེ་ཤི་ཡ་.mw
@@ -88,7 +88,7 @@
 [[ps:مالېزيا]]
 [[pt:Malásia]]
 [[qu:Malasya]]
-[[ro:Malaezia]]
+[[ro:Malaysia]]
 [[ru:Малайзия]]
 [[sa:मलयेशिया]]
 [[scn:Malesia]]
