--- a/ཨར་ཇེན་ཊི་ན་.mw
+++ b/ཨར་ཇེན་ཊི་ན་.mw
@@ -94,7 +94,7 @@
 [[ps:ارجنټاين]]
 [[pt:Argentina]]
 [[qu:Arhintina]]
-[[rm:Argentina]]
+[[rm:Argentinia]]
 [[ro:Argentina]]
 [[ru:Аргентина]]
 [[sa:अर्जन्टीना]]
