--- a/བངྒ་ལ་དེཤ.mw
+++ b/བངྒ་ལ་དེཤ.mw
@@ -75,6 +75,7 @@
 [[ms:Bangladesh]]
 [[na:Bangladesh]]
 [[nds:Bangladesch]]
+[[new:बंगलादेश]]
 [[nl:Bangladesh]]
 [[nn:Bangladesh]]
 [[no:Bangladesh]]
