--- a/བསམ་གྲུབ་ལྗོངས་མཁར་.mw
+++ b/བསམ་གྲུབ་ལྗོངས་མཁར་.mw
@@ -18,6 +18,7 @@
 [[es:Distrito de Samdrup Jongkhar]]
 [[et:Samdrup Jongkhari ringkond]]
 [[fr:Samdrup Jongkhar]]
+[[it:Distretto di Samdrup Jongkhar]]
 [[nl:Dzongkhag Samdrup Jongkhar]]
 [[no:Samdrup Jongkhar]]
 [[pt:Samdrup Jongkhar]]
