--- a/ཨས་ཊེཡེ་ལི་ཡ.mw
+++ b/ཨས་ཊེཡེ་ལི་ཡ.mw
@@ -99,6 +99,7 @@
 [[pdc:Australie]]
 [[pih:Ostrielya]]
 [[pl:Australia]]
+[[pms:Australia]]
 [[ps:آسټراليا]]
 [[pt:Austrália]]
 [[qu:Awstralya]]
@@ -129,6 +130,7 @@
 [[vec:Austrałia]]
 [[vi:Úc]]
 [[vo:Laustralän]]
+[[wo:Óstraali]]
 [[wuu:澳大利亚]]
 [[yi:אויסטראליע]]
 [[zea:Australië]]
