--- a/ཨི་རཱན་.mw
+++ b/ཨི་རཱན་.mw
@@ -1,4 +1,5 @@
 [[Image:LocationIran.svg|right|thumb|280px|ཨི་རཱན་]]
+[[Image:Persian.jpg|right|thumb| ཨི་རཱན་ - Collage , [http://www.collage.ws/info.html Majid Farahani]]]
 '''ཨི་རཱན་''' 
 
 ----
