--- a/པོར་ཅུ་གལ་.mw
+++ b/པོར་ཅུ་གལ་.mw
@@ -129,7 +129,7 @@
 [[tg:Португалия]]
 [[th:ประเทศโปรตุเกส]]
 [[tl:Portugal]]
-[[tpi:Potugal]]
+[[tpi:Posugol]]
 [[tr:Portekiz]]
 [[ty:Pōtītī]]
 [[udm:Португалия]]
