Interwiki:  + [[ksh:Jrußbrittannije]]

--- a/ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ.mw
+++ b/ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ.mw
@@ -78,6 +78,7 @@
 [[kk:Құрама Патшалық]]
 [[kn:ಯುನೈಟೆಡ್ ಕಿಂಗ್‍ಡಮ್]]
 [[ko:영국]]
+[[ksh:Jrußbrittannije]]
 [[ku:Keyatiya Yekbûyî ya Brîtaniya Mezin û Bakurê Îrlanda]]
 [[kw:Rywvaneth Unys]]
 [[la:Britanniarum Regnum]]
