--- a/ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ.mw
+++ b/ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ.mw
@@ -116,6 +116,7 @@
 [[ro:Regatul Unit]]
 [[roa-rup:Britania Mare]]
 [[ru:Великобритания]]
+[[rw:Ubwongereza]]
 [[sc:Rennu Auniadu]]
 [[scn:Regnu Unitu]]
 [[sco:Unitit Kinrick]]
