--- a/ཨཕ་ག་ནིསི་ཏཱན་.mw
+++ b/ཨཕ་ག་ནིསི་ཏཱན་.mw
@@ -83,6 +83,7 @@
 [[na:Afganistan]]
 [[nah:Afganistān]]
 [[nds:Afghanistan]]
+[[new:अफगानिस्तान]]
 [[nl:Afghanistan]]
 [[nn:Afghanistan]]
 [[no:Afghanistan]]
