--- a/ཕརཱནསི་.mw
+++ b/ཕརཱནསི་.mw
@@ -39,6 +39,7 @@
 [[da:Frankrig]]
 [[de:Frankreich]]
 [[diq:Fransa]]
+[[dsb:Francojska]]
 [[dv:ފަރަންސޭސިވިލާތް]]
 [[el:Γαλλία]]
 [[eml:Francia]]
@@ -148,6 +149,7 @@
 [[sq:Franca]]
 [[sr:Француска]]
 [[st:Fora]]
+[[stq:Frankriek]]
 [[sv:Frankrike]]
 [[sw:Ufaransa]]
 [[ta:பிரான்ஸ்]]
