*Empty MediaWiki Message*

--- a/སོག་པོ་.mw
+++ b/སོག་པོ་.mw
@@ -1,10 +1,10 @@
 [[Image:Naadam.jpg|right|thumb|སོག་པོ་]]
 [[Image:Flag of Mongolia.svg|right|thumb|]]
 '''སོག་པོ་'''
+   대한민국
 
 ----
 *[[ཏའི་ཝཱན་ ]]
-바보
 {{Asia}}
 
 [[af:Mongolië]]
