--- a/བཀྲིས་སྒང་.mw
+++ b/བཀྲིས་སྒང་.mw
@@ -1,5 +1,5 @@
-[Image:Trashigang_Dzong-a-2008-01-02.jpg|right|thumb|250px| བཀྲིས་སྒང་]
+[[Image:Trashigang_Dzong-a-2008-01-02.jpg|right|thumb|250px| བཀྲིས་སྒང་]]
 
-[Image:Trashigang_town-Bhutan-2008-01-02.jpg|right|thumb|250px| བཀྲིས་སྒང་]
+[[Image:Trashigang_town-Bhutan-2008-01-02.jpg|right|thumb|250px| བཀྲིས་སྒང་]]
 
 '''བཀྲིས་སྒང་'''
