--- a/ཌེན་མཱཀ་.mw
+++ b/ཌེན་མཱཀ་.mw
@@ -1,7 +1,11 @@
-== ུུུུུུུུུུུུུུུུུུུུུུུུུུུུུུུུུ སུཅཀ ཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀཀ ུཅཀ ==
+[[Image:EU location DEN.png|right|thumb|250px|ཌེན་མཱཀ་]]
+[[Image:Flag of Denmark.svg|right|thumb|]]
+[[Image:Storebæltsbroen from Sjælland.jpg|right|thumb|]]
+'''ཌེན་མཱཀ་'''
 
-ཝཏf ཝཧཨཏ ཨརེ ཡོུ སཨཡིང སདཇfདfཇགཀལfོཔཀལ;གརཇིོ༣ུག༤ནཀལེཇfཀལfཀལ
-ུནདེརསཏཨནད ཐཨཏ ནོ བེཅཨུསེ ིཙ ཨལལ སqུཨརེསསདfཇཀལཨ--[[Special:Contributions/64.88.11.89|64.88.11.89]] ༡༨:༥༤, ༩ January ༢༠༠༨ (UTC)--[[Special:Contributions/64.88.11.89|64.88.11.89]] ༡༨:༥༤, ༩ January ༢༠༠༨ (UTC)--[[Special:Contributions/64.88.11.89|64.88.11.89]] ༡༨:༥༤, ༩ January ༢༠༠༨ (UTC)--[[Special:Contributions/64.88.11.89|64.88.11.89]] ༡༨:༥༤, ༩ January ༢༠༠༨ (UTC)
+*[[ཕིན་ལེནཌ་]]
+
+{{Europe}}
 
 [[af:Denemarke]]
 [[als:Dänemark]]
@@ -25,7 +29,6 @@
 [[ca:Dinamarca]]
 [[ceb:Denmark]]
 [[co:Danimarca]]
-[[crh:Danimarka]]
 [[cs:Dánsko]]
 [[csb:Dëńskô]]
 [[cv:Дани]]
@@ -33,7 +36,6 @@
 [[da:Danmark]]
 [[de:Dänemark]]
 [[diq:Danimarka]]
-[[dsb:Dańska]]
 [[dv:ޑެންމާކު]]
 [[el:Δανία]]
 [[en:Denmark]]
