--- a/ཨུ་ཏེར་སེན.mw
+++ b/ཨུ་ཏེར་སེན.mw
@@ -1,4 +1,4 @@
-[[image:Uetersen Wappen.png|thumb|right|100px|Logo Uetersen]]
+{{delete|spam}}[[image:Uetersen Wappen.png|thumb|right|100px|Logo Uetersen]]
 [[image:Lage des Kreises Pinneberg in Deutschland.png| right|100px| Uetersen in Germany]]
 [[Image:Uetersen Stadtwerkehaus.jpg|thumb|rigth|Museum Uetersen]] 
 
