*Empty MediaWiki Message*

--- a/ཇ་པཱན.mw
+++ b/ཇ་པཱན.mw
@@ -1,4 +1,4 @@
-[[Image:Mountfujijapan.jpg|right|thumb|ཇ་པཱན་]]
+[[Image:Mountfujijaan.jpg|right|thumb|ཇ་པཱན་]]
 [[Image:Flag of Japan.svg|right|thumb]]
 '''ཇ་པཱན་'''
 
