*Empty MediaWiki Message*

--- a/ཅེཀ་རི་པབ་ལིཀ་.mw
+++ b/ཅེཀ་རི་པབ་ལིཀ་.mw
@@ -6,8 +6,8 @@
 {{Europe}}
 
 [[af:Tsjeggië]]
-[[am:ቼክ ሪፑብሊክ]]
-[[an:Republica Checa]]
+[[am:ቼክ ሪፑሊክ]]
+[[an:Republca Checa]]
 [[ang:Cecland]]
 [[ar:تشيك]]
 [[arc:ܬܫܝܟ]]
