*Empty MediaWiki Message*

--- a/ཅེཀ་རི་པབ་ལིཀ་.mw
+++ b/ཅེཀ་རི་པབ་ལིཀ་.mw
@@ -21,7 +21,7 @@
 [[bn:চেক প্রজাতন্ত্র]]
 [[bo:ཅེ་ཁེ]]
 [[bpy:চেক প্রজাতন্ত্র]]
-[[br:Republik Tchek]]
+[[br:Repubik Tchek]]
 [[bs:Češka republika]]
 [[ca:República Txeca]]
 [[ce:Чехия]]
