*Empty MediaWiki Message*

--- a/ཨའིསི་ལེནཌ་.mw
+++ b/ཨའིསི་ལེནཌ་.mw
@@ -1,4 +1,4 @@
-[[Image:Iceland_satellite.jpg|right|thumb|250px|ཨའིསི་ལེནཌ་]]
+[[Image:Icelandsatellite.jpg|right|thumb|250px|ཨའིསི་ལེནཌ་]]
 [[Image:Flag of Iceland.svg|right|thumb|]]
 [[Image:Grímsey Iceland.JPG|right|thumb|]]
 '''ཨའིསི་ལེནཌ་'''
