--- a/ནོ་ཝེ་.mw
+++ b/ནོ་ཝེ་.mw
@@ -1,6 +1,6 @@
-[[Image:Europe location NOR.png|right|thumb|250px|ནོ་ཝེ་]]
-[[Image:Flag of Norway.svg|right|thumb|]]
-[[Image:Borgundstavkirke.jpg|right|thumb|]]
+[[Image:Europe locaton NOR.png|right|thumb|250px|ནོ་ཝེ་]]
+[[Image:Flag of Nrway.svg|right|thumb|]]
+[[Image:Borgundsavkirke.jpg|right|thumb|]]
 '''ནོ་ཝེ་'''
 
 *[[ནེ་དར་ལེནཌསི་]]
