--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -3,3 +3,4 @@
 
 == དང་གླིང་ཆེན་ ༦ གི་ནང་ལུ་  ==
 ལོལ, ཐིས ིས ཨལལ ཝིེརད. ཡོུ གུཡས ཨརེ གོིང ཏོ ཏོ བེ ཅོནqེུརེད བཡ ཆིནཨ ིན ལིཀེ ེིགཧཏ དཨཡ ེཧརུཧཝ. ིཇིོཇོཧེཝོཧfིཧིffིུརུུvཧདཧཤཅནདནཤཇདཇཧཧདཧཝནཝནདུད༨༤༨༤༨༨༩༠༩༨༩༨ཇ
+ཝརུཏུརfཧཧེེཧདཧfབེཧེབེཧfཧེབཧབfཧfབཧེfབཧེབེུབབfོརབfོུརབfོུརབfོུརབོུརབfོརུབfོfརབfབfབདཇཝིདེུབfེེུཇེིཀིv. ུfརརེབེརིfནེས. ིfུརར༨རཇདfནབདེིུfནེདཇནབདིེ, fཧfཧེིfབེདཇfཇིཝཝནfིfིfཀལ. ཐེིདིཤཨ ིརཧས fཨཔ fཨཔ ཇརིཇོིf. ༤ིུfུཧུརུ༣༩༩fཇགfིོfོོིཇོིf. ༤ིུཧརིུཧེིེུཝཧདང་གླིང་ཆེན་ ༦ གི་ནང་ལུ་ རེིཧརིོིོཧེིཧརིེརོིེཧ. རfརཧེཧfུཝཝུfབfརེfུ.
