*Empty MediaWiki Message*

--- a/ཁང་ཆེས་.mw
+++ b/ཁང་ཆེས་.mw
@@ -1,4 +1,6 @@
 ཤིང་དང་ ལྕགས་ཀྱིས་ བཟོ་བཟོ་བབཟོ་བཟོ་བའི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང།བཟོ་བཟོ་བའི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང།བཟོ་བཟོ་བའི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང།འི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང།
+
+ོམག ཨ ཏཨབལེཆཨིརསབེནཆཡ ཐིངཡབཨབོབེརརེར
 [[Image:Khangche.JPG|right|thumbnail|300px|ཁང་ཆེས་]]
 
 [[af:Meubelstuk]]
