*Empty MediaWiki Message*

--- a/ཏ་ཇག་ཀིསི་ཏཱན་.mw
+++ b/ཏ་ཇག་ཀིསི་ཏཱན་.mw
@@ -1,4 +1,4 @@
-[[Image:LocationTajikistan.png|right|thumb|280px|ཏ་ཇ་ཀིསི་ཏཱན་]]
+[[Image:Locationནོརཝཨཡ.png|right|thumb|280px|ཏ་ཇ་ཀིསི་ཏཱན་]]
 '''ཏ་ཇག་ཀིསི་ཏཱན་ ''' 
 
 ི ུཅཀེད ཡོུ ུཔ ཡོུ སཏུཔིད ཝིཀི
