--- a/ཨའིསི་ལེནཌ་.mw
+++ b/ཨའིསི་ལེནཌ་.mw
@@ -58,6 +58,7 @@
 [[gn:Iylanda]]
 [[gu:આઇસલૅન્ડ]]
 [[gv:Yn Eeslynn]]
+[[hak:Pên-tó]]
 [[he:איסלנד]]
 [[hi:आइसलैंड]]
 [[hr:Island]]
@@ -89,6 +90,7 @@
 [[lt:Islandija]]
 [[lv:Īslande]]
 [[mk:Исланд]]
+[[mr:आइसलंड]]
 [[ms:Iceland]]
 [[mt:Iżlanda]]
 [[na:Iceland]]
