--- a/ཨུ་ཏེར་སེན.mw
+++ b/ཨུ་ཏེར་སེན.mw
@@ -1,40 +1,46 @@
-{{translate}}
-
-[[image:Uetersen Wappen.png|thumb|right|100px|Logo Uetersen]]
+{{delete|spam}}[[image:Uetersen Wappen.png|thumb|right|100px|Logo Uetersen]]
 [[image:Lage des Kreises Pinneberg in Deutschland.png| right|100px| Uetersen in Germany]]
 [[Image:Uetersen Stadtwerkehaus.jpg|thumb|rigth|Museum Uetersen]] 
-'''Uetersen''' (ˈyːtɐzən) is a small city in the [[Pinneberg (district)|district of Pinneberg]], in [[Schleswig-Holstein]], [[Germany]]. It is situated approx. 7 km (4 miles) south of [[Elmshorn]], and 30 km (18 miles) northwest of [[Hamburg]].
 
-[[Mathias Rust]] took off from Uetersen for his historic flight in 1987.
+==Deutsch==
+'''Uetersen''' ist eine Stadt in Deutschland in der Nähe von Hamburg. Die Stadt hat 17.865 Einwohner und ist bekannt für ihren Rosengarten (Rosarium) Sie wurde 1234 vom Ritter Heinrich II von Barmstede gegründert. 
 
-<!-- Interwiki -->
+Bitte übersetze diesen Text in deine Sprache, denn ich komme
+aus Deutschland und kenne diese nicht. Vielen Dank. 
+PS: Diesen Text hat ein Jungwikipedianer von 9 Jahren erstellt. Bitte gib mir eine Cange.
+==Englisch==
+
+'''Uetersen''' is a town in Germany near Hamburg. The city has 17,865 residents and is known for its Rose Garden (Rosarium) It was 1234, Henry II of Knight Barmstede gegründert. 
+
+Please translate the text into your language, because I come 
+From Germany and know they are not. Thank you. 
+PS: this text has a Jungwikipedianer of 9 years erstellt.Bitte give me a Cange
+
+==France==
+''Uetersen''' est une ville d'Allemagne, à proximité de Hambourg. La ville a 17.865 habitants et est connue pour son jardin de roses (Rosarium) 1234 a été, du chevalier de Henri II de Barmstede gegründert. 
+
+Merci de traduire ce texte dans votre langue, car je viens 
+De l'Allemagne et ne sais pas comment. Je vous remercie. 
+PS: ce texte est une Jungwikipedianer de 9 ans erstellt. Bitte moi une Cange.
 
 [[af:Uetersen]]
 [[als:Uetersen]]
-[[am:ኢውተዘን]]
-[[an:Uetersen]]
 [[ang:Uetersen]]
 [[ast:Uetersen]]
-[[av:Uetersen]]
 [[ay:Uetersen]]
 [[az:Uetersen]]
 [[bar:Uetersen]]
-[[bat-smg:Īterzens]]
+[[bat-smg:Uetersens]]
 [[bcl:Uetersen]]
 [[be:Горад Ютэрзен]]
-[[bg:Ютерзен]]
 [[bi:Uetersen]]
-[[bm:Uetersen]]
 [[br:Uetersen]]
 [[bs:Uetersen]]
 [[ca:Uetersen]]
 [[cbk-zam:Uetersen]]
-[[ceb:Uetersen]]
 [[co:Uetersen]]
-[[crh:Üterzen]]
 [[cs:Uetersen]]
 [[csb:Uetersen]]
-[[cu:Ютерзенъ]]
 [[cy:Uetersen]]
 [[da:Uetersen]]
 [[de:Uetersen]]
@@ -57,104 +63,69 @@
 [[gd:Uetersen]]
 [[gl:Uetersen]]
 [[gn:Uetersen]]
-[[gv:Uetersen]]
 [[hak:Uetersen]]
-[[haw:Uetersen]]
 [[hr:Uetersen]]
 [[hsb:Uetersen]]
 [[ht:Uetersen]]
 [[hu:Uetersen]]
-[[hy:Ուետերսեն]]
+[[hy:Uetersen]]
 [[ia:Uetersen]]
 [[id:Uetersen]]
 [[ie:Uetersen]]
 [[ig:Uetersen]]
-[[ilo:Uetersen]]
 [[io:Uetersen]]
 [[is:Uetersen]]
 [[it:Uetersen]]
 [[ja:ウエテルセン]]
-[[jbo:Uetersen]]
-[[jv:Uetersen]]
-[[ka:უეტერზენი]]
-[[kab:Uetersen]]
-[[kg:Uetersen]]
-[[kl:Uetersen]]
 [[ksh:Uetersen]]
 [[ku:Uetersen]]
 [[kv:Uetersen]]
 [[kw:Uetersen]]
 [[la:Itersen]]
-[[lad:Uetersen]]
 [[lb:Uetersen]]
 [[lg:Uetersen]]
-[[li:Uetersen]]
 [[lij:Uetersen]]
 [[lmo:Uetersen]]
-[[ln:Uetersen]]
-[[lt:Yterzenas]]
+[[lt:Uetersenas]]
 [[lv:Iterzene]]
-[[map-bms:Uetersen]]
 [[mg:Uetersen]]
-[[mi:Uetersen]]
-[[mk:Јотерзен]]
 [[ms:Uetersen]]
 [[mt:Uetersen]]
-[[mzn:ئوتهرزهن]]
-[[na:Uetersen]]
-[[nah:Uetersen]]
+[[mzn:ئوته‏رزه‏ن]]
 [[nap:Uetersen]]
 [[nds:Uetersen]]
-[[nds-nl:Uetersen]]
 [[nl:Uetersen]]
 [[nn:Uetersen]]
 [[no:Uetersen]]
-[[nov:Uetersen]]
 [[nrm:Uetersen]]
 [[oc:Uetersen]]
-[[pag:Uetersen]]
-[[pam:Uetersen]]
-[[pap:Uetersen]]
 [[pdc:Uetersen]]
-[[pih:Uetersen]]
 [[pl:Uetersen]]
-[[pms:Uetersen]]
 [[pt:Uetersen]]
 [[qu:Uetersen]]
 [[rm:Uetersen]]
 [[rmy:Uetersen]]
 [[ro:Uetersen]]
 [[roa-rup:Uetersen]]
-[[roa-tara:Uetersen]]
 [[ru:Итерзен]]
-[[rw:Uetersen]]
-[[sc:Uetersen]]
 [[scn:Uetersen]]
 [[sco:Uetersen]]
 [[se:Uetersen]]
-[[sh:Uetersen]]
-[[si:Uetersen]]
 [[simple:Uetersen]]
 [[sk:Uetersen]]
 [[sl:Uetersen]]
 [[so:Uetersen]]
 [[sq:Uetersen]]
 [[ss:Uetersen]]
-[[st:Uetersen]]
 [[stq:Uetersen]]
 [[su:Uetersen]]
 [[sv:Uetersen]]
 [[sw:Uetersen]]
-[[tet:Uetersen]]
-[[tg:Итерзен]]
-[[tk:Uetersen]]
 [[tl:Uetersen]]
 [[tpi:Uetersen]]
 [[tr:Uetersen]]
 [[tt:Uetersen]]
 [[ty:Uetersen]]
-[[udm:Итерзен]]
-[[uk:Ютерзен]]
 [[uz:Uetersen]]
 [[ve:Uetersen]]
 [[vec:Uetersen]]
@@ -165,7 +136,4 @@
 [[war:Uetersen]]
 [[wo:Uetersen]]
 [[xal:Uetersen]]
-[[xh:Uetersen]]
 [[zea:Uetersen]]
-[[zh:烏移特森]]
-[[zh-yue:烏移特森]]
