Reverted edits by [[Special:Contributions/208.27.234.156|208.27.234.156]] ([[User talk:208.27.234.156|Talk]]); changed back to last version by [[User:VolkovBot|VolkovBot]]

--- a/ཏ་ཇག་ཀིསི་ཏཱན་.mw
+++ b/ཏ་ཇག་ཀིསི་ཏཱན་.mw
@@ -1,8 +1,6 @@
-[[Image:Locationནོརཝཨཡ.png|right|thumb|280px|ཏ་ཇ་ཀིསི་ཏཱན་]]
+[[Image:LocationTajikistan.png|right|thumb|280px|ཏ་ཇག་ཀིསི་ཏཱན་]]
 '''ཏ་ཇག་ཀིསི་ཏཱན་ ''' 
 
-ི ུཅཀེད ཡོུ ུཔ ཡོུ སཏུཔིད ཝིཀི
-ི ཧཨཏེ ཝིཀིཔེདིཨ བུཏ ི ཨམ དོམིནཨནཏ ོvེར ིཏ ཧཨཧཨཧཨ ནོཐིང ཡོུ དོ ཅཨན སཏོཔ མེ ཡོུ ོོལིཤ ུསེར ོf ཐིས ོདད ལཨངུཨགེད ཝིཀི ི ཨནདཨལིཟེ ཨནད ཡོུ རེཨད བུཏ ཡོུ ཅཨན དོ ནོཐིགན ཨགཨིནསཏ མེ ཡཨཡ བེཅཨུསེ ཡོུ ༢༥༥ ཨརེར ལོོོསེརས ཝཧེན ིཏ ཅོམེས ཏོ ཝིཀིཔེདིཨ བེཅཨུསེ ེvེརཡོནེ ིས ཨ ལོསེར ཝཧེན ིཏ ཅོམེས ཏོ ཐཏིས དུམབ སིཏེ བེཅཨུསེ ཝིཀི པེདིཨ ིས སོ ེརཡ ེརཡ ེརཡ ཨམཨཟིངལཡ སཏུཔིད ཐ ཐཏ 
 ----
 *[[ཀ་ཏར་]]
 
