Reverted edits by [[Special:Contributions/208.27.234.156|208.27.234.156]] ([[User talk:208.27.234.156|Talk]]); changed back to last version by [[User:VolkovBot|VolkovBot]]

--- a/ཨྀཊ་ལི་.mw
+++ b/ཨྀཊ་ལི་.mw
@@ -1,5 +1,5 @@
 [[Image:Location Italy EU Europe.png|right|thumb|ཨྀཊ་ལི་]]
-[[Image:Flag of པེནིས.svg|right|thumb]]
+[[Image:Flag of Italy.svg|right|thumb]]
 '''ཨྀཊ་ལི་'''
 
 ----
