Reverted edits by [[Special:Contributions/208.27.234.156|208.27.234.156]] ([[User talk:208.27.234.156|Talk]]); changed back to last version by [[User:SieBot|SieBot]]

--- a/ཕིན་ལེནཌ་.mw
+++ b/ཕིན་ལེནཌ་.mw
@@ -19,7 +19,7 @@
 [[bar:Finnlånd]]
 [[bat-smg:Soumėjė]]
 [[be:Фінляндыя]]
-[[be-༡༩-old:Фінляндыя]]
+[[be-x-old:Фінляндыя]]
 [[bg:Финландия]]
 [[bn:ফিনল্যান্ড]]
 [[bo:ཧྥིན་ལན]]
