--- a/ཅེཀ་རི་པབ་ལིཀ་.mw
+++ b/ཅེཀ་རི་པབ་ལིཀ་.mw
@@ -1,13 +1,13 @@
 [[Image:EU location CZE.png|right|thumb|250px|ཅེཀ་རི་པབ་ལིཀ་]]
-'''ཅེཀ་རི་པབ་ལིཀ་'''བཟོ་བཟོ་བའི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང།
+'''ཅེཀ་རི་པབ་ལིཀ་'''
 
 *[[ཕིན་ལེནཌ་ ]] 
 
 {{Europe}}
 
 [[af:Tsjeggië]]
-[[am:ቼክ ሪፑሊክ]]
-[[an:Republca Checa]]
+[[am:ቼክ ሪፑብሊክ]]
+[[an:Republica Checa]]
 [[ang:Cecland]]
 [[ar:تشيك]]
 [[arc:ܬܫܝܟ]]
@@ -21,7 +21,7 @@
 [[bn:চেক প্রজাতন্ত্র]]
 [[bo:ཅེ་ཁེ]]
 [[bpy:চেক প্রজাতন্ত্র]]
-[[br:Repubik Tchek]]
+[[br:Republik Tchek]]
 [[bs:Češka republika]]
 [[ca:República Txeca]]
 [[ce:Чехия]]
@@ -111,6 +111,7 @@
 [[ro:Cehia]]
 [[roa-rup:Cehia]]
 [[ru:Чехия]]
+[[sa:चेक रिपब्लिक]]
 [[scn:Ripùbblica Ceca]]
 [[sco:Czech Republic]]
 [[se:Čeahkka]]
