Reverted edits by [[Special:Contributions/208.27.234.156|208.27.234.156]] ([[User talk:208.27.234.156|Talk]]); changed back to last version by [[User:PipepBot|PipepBot]]

--- a/ཨའིརི་ལེནཌ་.mw
+++ b/ཨའིརི་ལེནཌ་.mw
@@ -1,6 +1,6 @@
-[[Image:Ireland.A2003004.pg|right|thumb|250px|ཨའིརི་ལེནཌ་]]
-[[Image:Flag of Ireland.svgright|thumb|]]
-[[Image:Red der.jpg|right|thumb|]]
+[[Image:Ireland.A2003004.jpg|right|thumb|250px|ཨའིརི་ལེནཌ་]]
+[[Image:Flag of Ireland.svg|right|thumb|]]
+[[Image:Red deer.jpg|right|thumb|]]
 '''ཨའིརི་ལེནཌ་'''
 
 *[[སུའིཊ་ཛར་ལེན་]] 
