--- a/ཨུ་ཏེར་སེན.mw
+++ b/ཨུ་ཏེར་སེན.mw
@@ -145,6 +145,7 @@ PS: ce texte est une Jungwikipedianer de 9 ans erstellt. Bitte moi une Cange.
 [[scn:Uetersen]]
 [[sco:Uetersen]]
 [[se:Uetersen]]
+[[sg:Uetersen]]
 [[sh:Uetersen]]
 [[si:Uetersen]]
 [[simple:Uetersen]]
@@ -162,6 +163,7 @@ PS: ce texte est une Jungwikipedianer de 9 ans erstellt. Bitte moi une Cange.
 [[tg:Итерзен]]
 [[tk:Uetersen]]
 [[tl:Uetersen]]
+[[tn:Uetersen]]
 [[tpi:Uetersen]]
 [[tr:Uetersen]]
 [[tt:Uetersen]]
@@ -181,4 +183,5 @@ PS: ce texte est une Jungwikipedianer de 9 ans erstellt. Bitte moi une Cange.
 [[xh:Uetersen]]
 [[zea:Uetersen]]
 [[zh:烏移特森]]
+[[zh-min-nan:Uetersen]]
 [[zh-yue:烏移特森]]
