--- a/གྲྀས.mw
+++ b/གྲྀས.mw
@@ -57,7 +57,7 @@
 [[gd:A' Ghrèig]]
 [[gl:Grecia - Ελλάδα]]
 [[gn:Gyresia]]
-[[gv:Yn Ghreag]]
+[[gv:Y Ghreag]]
 [[hak:Hî-lia̍p]]
 [[haw:Helene]]
 [[he:יוון]]
@@ -147,7 +147,7 @@
 [[war:Gresya]]
 [[wo:Girees]]
 [[yi:גריכנלאנד]]
-[[yo:Greesi]]
+[[yo:Gréésì]]
 [[zh:希腊]]
 [[zh-classical:希臘]]
 [[zh-min-nan:Hi-lia̍p]]
