--- a/ཨུ་ཏེར་སེན.mw
+++ b/ཨུ་ཏེར་སེན.mw
@@ -39,6 +39,7 @@
 [[cs:Uetersen]]
 [[csb:Uetersen]]
 [[cu:Ӱтерзенъ]]
+[[cv:Uetersen]]
 [[cy:Uetersen]]
 [[da:Uetersen]]
 [[de:Uetersen]]
@@ -172,6 +173,7 @@
 [[wo:Uetersen]]
 [[xal:Uetersen]]
 [[xh:Uetersen]]
+[[za:Uetersen]]
 [[zea:Uetersen]]
 [[zh:烏移特森]]
 [[zh-min-nan:Uetersen]]
