robot  Adding: [[hak:Â-kîn-thìn]]

--- a/ཨར་ཇེན་ཊི་ན་.mw
+++ b/ཨར་ཇེན་ཊི་ན་.mw
@@ -45,6 +45,7 @@
 [[gl:Arxentina - Argentina]]
 [[gn:Argentina]]
 [[gv:Yn Argenteen]]
+[[hak:Â-kîn-thìn]]
 [[he:ארגנטינה]]
 [[hi:अर्जेन्टीना]]
 [[hr:Argentina]]
