--- a/ཛིམ་བབ་ཝེ་.mw
+++ b/ཛིམ་བབ་ཝེ་.mw
@@ -38,6 +38,7 @@
 [[ga:An tSiombáib]]
 [[gd:Siombabue]]
 [[gl:Cimbabue - Zimbabwe]]
+[[gv:Yn Çhimbabwe]]
 [[he:זימבבואה]]
 [[hi:ज़िम्बाबवे]]
 [[hr:Zimbabve]]
