--- a/ནིའུ་ཛི་ལེནཌ་.mw
+++ b/ནིའུ་ཛི་ལེནཌ་.mw
@@ -56,7 +56,7 @@
 [[kk:Жаңа Зеландия]]
 [[ko:뉴질랜드]]
 [[ks:न्यू-जीलैंड]]
-[[ku:Zelanda Nû]]
+[[ku:Zelandaya Nû]]
 [[kw:Mordir Nowydh]]
 [[la:Nova Zelandia]]
 [[lb:Neiséiland]]
@@ -102,6 +102,7 @@
 [[sr:Нови Зеланд]]
 [[su:Selandia Anyar]]
 [[sv:Nya Zeeland]]
+[[sw:New Zealand]]
 [[ta:நியூசிலாந்து]]
 [[th:ประเทศนิวซีแลนด์]]
 [[tl:New Zealand]]
