*Empty MediaWiki Message*

--- a/སོག་པོ་.mw
+++ b/སོག་པོ་.mw
@@ -119,10 +119,11 @@
 [[uk:Монголія]]
 [[uz:Moʻgʻuliston]]
 [[vi:Mông Cổ]]
-[[vo:Mongolän]]
+[[vo:Mongolän]]Suche
 [[wo:Mongooli]]
 [[wuu:蒙古国]]
 [[yi:מאנגאליי]]
 [[zh:蒙古国]]
 [[zh-classical:蒙古國]]
 [[zh-min-nan:Bông-kó͘]]
+ཝེར སེིད ིཧར དེནན ཨལལེ. ིཆ བིན དེར གརོསསེ ེགིཏ བཨལ ཨུས སཏེིནཧེིམ-མུརར གེརམཨཉ fརིེདརིཆསཏརཨསསེ༥  ཏག ཏv ཙ ག ཅརོསསདརེསསེར ཝེལཏཝེིཏ
