--- a/སོག་པོ་.mw
+++ b/སོག་པོ་.mw
@@ -2,7 +2,7 @@
 [[Image:Flag of Mongolia.svg|right|thumb|]]
 '''སོག་པོ་'''
    대한민국
-
+ཏག ཏv ཙ ག ཅརོསསདརེསསེར ཝེལཏཝེིཏ བིཏཏེ ེགིཏ བཨལ ིན ༧༡༧༡༡ སཏེིནཧེིམ.-མུརར གེརམཨཉ ཝེལཏཝེིཏ བེཀཨནནཏ   དེར དöནེརfརིཏཟེ
 ----
 *[[ཏའི་ཝཱན་ ]]
 {{Asia}}
