--- a/སོག་པོ་.mw
+++ b/སོག་པོ་.mw
@@ -28,7 +28,7 @@
 [[cy:Mongolia]]
 [[da:Mongoliet]]
 [[de:Mongolei]]
-[[diq:Moğolıstan]]
+[[diq:Moğolıstan]]Suche
 [[dv:މޮންގޯލިއާ]]
 [[el:Μογγολία]]
 [[en:Mongolia]]
@@ -38,7 +38,7 @@
 [[eu:Mongolia]]
 [[fa:مغولستان]]
 [[fi:Mongolia]]
-[[fr:Mongolie]]
+[[fr:Mongolie]]Suche
 [[frp:Mongolie]]
 [[fy:Mongoalje]]
 [[ga:An Mhongóil]]
@@ -49,7 +49,7 @@
 [[he:מונגוליה]]
 [[hi:मंगोलिया]]
 [[hr:Mongolija]]
-[[hsb:Mongolska]]
+[[hsb:Mongolska]]Suche
 [[ht:Mongoli]]
 [[hu:Mongólia]]
 [[hy:Մոնղոլիա]]
@@ -72,7 +72,7 @@
 [[li:Mongolië]]
 [[lij:Mongòllia]]
 [[lt:Mongolija]]
-[[lv:Mongolija]]
+[[lv:Mongolija]]Suche
 [[mi:Mongōria]]
 [[mk:Монголија]]
 [[ml:മംഗോളിയ]]
@@ -80,16 +80,16 @@
 [[mr:मंगोलिया]]
 [[ms:Mongolia]]
 [[nah:Mongollān]]
-[[nds:Mongolei]]
+[[nds:Mongolei]]Suche
 [[nds-nl:Mongolië]]
 [[nl:Mongolië]]
 [[nn:Mongolia]]
 [[no:Mongolia]]
 [[nov:Mongolia]]
 [[nrm:Mongolie]]
-[[oc:Mongolia]]
+[[oc:Mongolia]]                         མཨརིཨནནཨ ཀེརäནེན ཨུས ༧༡༧༡༡ མུརར ཨན དེར མུརར གེརམཨཉ  བིན ཀöནིགིན ིན དེར ཝེལཏ
 [[os:Монголи]]
-[[pam:Mongolia]]
+[[pam:Mongolia]]Suche
 [[pl:Mongolia]]
 [[pms:Mongòlia]]
 [[ps:مغولستان]]
