Reverted edits by [[Special:Contributions/84.161.196.77|84.161.196.77]] ([[User talk:84.161.196.77|Talk]]); changed back to last version by [[User:AlleborgoBot|AlleborgoBot]]

--- a/སོག་པོ་.mw
+++ b/སོག་པོ་.mw
@@ -2,7 +2,7 @@
 [[Image:Flag of Mongolia.svg|right|thumb|]]
 '''སོག་པོ་'''
    대한민국
-ཏག ཏv ཙ ག ཅརོསསདརེསསེར ཝེལཏཝེིཏ བིཏཏེ ེགིཏ བཨལ ིན ༧༡༧༡༡ སཏེིནཧེིམ.-མུརར གེརམཨཉ ཝེལཏཝེིཏ བེཀཨནནཏ   དེར དöནེརfརིཏཟེ
+
 ----
 *[[ཏའི་ཝཱན་ ]]
 {{Asia}}
@@ -28,7 +28,7 @@
 [[cy:Mongolia]]
 [[da:Mongoliet]]
 [[de:Mongolei]]
-[[diq:Moğolıstan]]Suche
+[[diq:Moğolıstan]]
 [[dv:މޮންގޯލިއާ]]
 [[el:Μογγολία]]
 [[en:Mongolia]]
@@ -38,7 +38,7 @@
 [[eu:Mongolia]]
 [[fa:مغولستان]]
 [[fi:Mongolia]]
-[[fr:Mongolie]]Suche
+[[fr:Mongolie]]
 [[frp:Mongolie]]
 [[fy:Mongoalje]]
 [[ga:An Mhongóil]]
@@ -49,7 +49,7 @@
 [[he:מונגוליה]]
 [[hi:मंगोलिया]]
 [[hr:Mongolija]]
-[[hsb:Mongolska]]Suche
+[[hsb:Mongolska]]
 [[ht:Mongoli]]
 [[hu:Mongólia]]
 [[hy:Մոնղոլիա]]
@@ -72,7 +72,7 @@
 [[li:Mongolië]]
 [[lij:Mongòllia]]
 [[lt:Mongolija]]
-[[lv:Mongolija]]Suche
+[[lv:Mongolija]]
 [[mi:Mongōria]]
 [[mk:Монголија]]
 [[ml:മംഗോളിയ]]
@@ -80,16 +80,16 @@
 [[mr:मंगोलिया]]
 [[ms:Mongolia]]
 [[nah:Mongollān]]
-[[nds:Mongolei]]Suche
+[[nds:Mongolei]]
 [[nds-nl:Mongolië]]
 [[nl:Mongolië]]
 [[nn:Mongolia]]
 [[no:Mongolia]]
 [[nov:Mongolia]]
 [[nrm:Mongolie]]
-[[oc:Mongolia]]                         མཨརིཨནནཨ ཀེརäནེན ཨུས ༧༡༧༡༡ མུརར ཨན དེར མུརར གེརམཨཉ  བིན ཀöནིགིན ིན དེར ཝེལཏ
+[[oc:Mongolia]]
 [[os:Монголи]]
-[[pam:Mongolia]]Suche
+[[pam:Mongolia]]
 [[pl:Mongolia]]
 [[pms:Mongòlia]]
 [[ps:مغولستان]]
@@ -119,11 +119,10 @@
 [[uk:Монголія]]
 [[uz:Moʻgʻuliston]]
 [[vi:Mông Cổ]]
-[[vo:Mongolän]]Suche
+[[vo:Mongolän]]
 [[wo:Mongooli]]
 [[wuu:蒙古国]]
 [[yi:מאנגאליי]]
 [[zh:蒙古国]]
 [[zh-classical:蒙古國]]
 [[zh-min-nan:Bông-kó͘]]
-ཝེར སེིད ིཧར དེནན ཨལལེ. ིཆ བིན དེར གརོསསེ ེགིཏ བཨལ ཨུས སཏེིནཧེིམ-མུརར གེརམཨཉ fརིེདརིཆསཏརཨསསེ༥  ཏག ཏv ཙ ག ཅརོསསདརེསསེར ཝེལཏཝེིཏ
