*Empty MediaWiki Message*

--- a/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
+++ b/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
@@ -1,4 +1,5 @@
-[[འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད]] (National Library of Bhutan)
+<span style="font-size: larger;">འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད</span> (National Library of Bhutan)
+
 [[Image:National_Library-Thimphu-Bhutan-2008_01_23.jpg|right|thumb|300px|འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད]]
 
 
