--- a/བངྒ་ལ་དེཤ.mw
+++ b/བངྒ་ལ་དེཤ.mw
@@ -24,6 +24,7 @@
 [[crh:Bangladeş]]
 [[cs:Bangladéš]]
 [[csb:Bangladesz]]
+[[cv:Бангладеш]]
 [[cy:Bangladesh]]
 [[da:Bangladesh]]
 [[de:Bangladesch]]
