*Empty MediaWiki Message*

--- a/ཨུ་ཏེར་སེན.mw
+++ b/ཨུ་ཏེར་སེན.mw
@@ -1,23 +1,18 @@
-{{delete|in English}}
-
-''Wikipedia articles needing translation''
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''{{PAGENAME}}'''</big></big><Br>''Rosenstadt Uetersen''
+|+<big><big>'''{{PAGENAME}}'''</big></big><Br>''Uetersen''
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[Image:Uetersen Wappen.png|100px]]
-| align="center" width="140px" | [[Image:Lage des Kreises Pinneberg in Deutschland.png|right|100px]]
+| align="center" width="140px" | [[Image:Lage des Kreises Pinneberg in Deutschland.png|thumb|100px|ཨེུཏེརསེན ཇཱར་མ་ནི་]]
 |}
 |-
 | align=center colspan=2 | [[image:Uetersen Stadtwerkehaus.jpg|center|250px]]
 |}
 
 
-'''Uetersen''' (ˈyːtɐzən) is a small city in the [[Pinneberg (district)|district of Pinneberg]], in [[Schleswig-Holstein]], [[Germany]]. It is situated approx. 7 km (4 miles) south of [[Elmshorn]], and 30 km (18 miles) northwest of [[Hamburg]].
-
-[[Mathias Rust]] took off from Uetersen for his historic flight in 1987.
+'''ཨེུཏེརསེན''' (ཨེུཏེརསེན), [[ཇཱར་མ་ནི་]]
 
 [[af:Uetersen]]
 [[ak:Uetersen]]
