--- a/ལྷོ་ཀོ་རི་ཡ་.mw
+++ b/ལྷོ་ཀོ་རི་ཡ་.mw
@@ -1,4 +1,4 @@
-[[Image:LocationSouthKorea.png|right|thumb|ལྷོ་ཀོ་རི་ཡ་]]
+[[Image:LocationSouth_Korea.png|right|thumb|ལྷོ་ཀོ་རི་ཡ་]]
 [[Image:Flag of South Korea.svg|right|thumb]]
 '''ལྷོ་ཀོ་རི་ཡ་'''
 
