The file [[:Image:LocationSouth_Korea.png]] has been replaced by [[:Image:LocationSouthKorea.png]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/ལྷོ་ཀོ་རི་ཡ་.mw
+++ b/ལྷོ་ཀོ་རི་ཡ་.mw
@@ -1,4 +1,4 @@
-[[Image:LocationSouth_Korea.png|right|thumb|ལྷོ་ཀོ་རི་ཡ་]]
+[[Image:LocationSouthKorea.png|right|thumb|ལྷོ་ཀོ་རི་ཡ་]]
 [[Image:Flag of South Korea.svg|right|thumb]]
 '''ལྷོ་ཀོ་རི་ཡ་'''
 
