*Empty MediaWiki Message*

--- a/སྤ་རོ་རྫོང་ཁག.mw
+++ b/སྤ་རོ་རྫོང་ཁག.mw
@@ -1,1 +1,1 @@
-སྤ་རོ་རྫོང་ཁག་འདི [[འབྲུག་ཡུལ་|འབྲུག་རྒྱལ་ཁབ་]]ནང་་རྫོང་ཁག 20 ཡོད་པའི་ནང་ལས་ ས་ཆ་དགའ་ཤོས་ཅིག་ཨིན། རྫོང་ཁག་བདག་སྤྱོང་ལྟེ་བ་ [[སྤ་རོ་རིན་སྤུང་རྫོང|རིན་སྤུང་རྫོང་]]འདི་ སྤྱི་ལོ་ 1644 /45 ལོ་ལུ་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་གཅིག་བསྒྲིལ་བཟོ་གནང་མི་
+སྤ་རོ་རྫོང་ཁག་འདི [[འབྲུག་ཡུལ་|འབྲུག་རྒྱལ་ཁབ་]]ནང་་རྫོང་ཁག 20 ཡོད་པའི་ནང་ལས་ ས་ཆ་དགའ་ཤོས་ཅིག་ཨིན། རྫོང་ཁག་བདག་སྤྱོང་ལྟེ་བ་ [[སྤ་རོ་རིན་སྤུང་རྫོང|རིན་སྤུང་རྫོང་]]འདི་ སྤྱི་ལོ་ 1644 /45 ལོ་ལུ་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་གཅིག་བསྒྲིལ་བཟོ་གནང་མི་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་ [[ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ|ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་]]རང་གིས་བཞེངས་ཏེ་
