--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -1,3 +1,7 @@
 [[ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ]] (1594-1651)
 
 {{stub}}
+
+==References==
+
+* ''Author:'' Ardussi, John ; ''Title:'' [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf Formation of the State of Bhutan ('Brug gzhung) in the 17th Century and its Tibetan Antecedents] ''in'' [http://www.digitalhimalaya.com/collections/journals/jbs/index.php Journal of Bhutan Studies], Vol 11 2004, [http://www.bhutanstudies.org.bt Centre for Bhutan Studies], Thimphu.  [http://www.thdl.org/texts/reprints/jbs/JBS_11_02.pdf],[http://www.bhutanstudies.org.bt/admin/pubFiles/v11-2.pdf], [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf]<br>
