--- a/ཤཱ་ཀྱ་ཐུབ་པ.mw
+++ b/ཤཱ་ཀྱ་ཐུབ་པ.mw
@@ -1,2 +1,2 @@
 [[ཤཱ་ཀྱ་ཐུབ་པ]] (Śākyamuni)
-[[Image:Bhutanese_Drukpa_applique_Buddhist_lineage_thonka_with_Shakyamuni_Buddha_in_center%2C_19th_century%2C_Ruben_Museum_of_Art.jpg|thumb|256px|right| '''རྒྱལ་བ་ཤཱ་ཀྱ་ཐུབ་པ''']]
+[[Image:Bhutanese_Drukpa_applique_Buddhist_lineage_thonka_with_Shakyamuni_Buddha_in_center%2C_19th_century%2C_Ruben_Museum_of_Art.jpg|thumb|256px|right| རྒྱལ་བ་ཤཱ་ཀྱ་ཐུབ་པ]]
