*Empty MediaWiki Message*

--- a/ཨོ་རྒྱན་དབང་ཕྱུག.mw
+++ b/ཨོ་རྒྱན་དབང་ཕྱུག.mw
@@ -2,7 +2,7 @@
 [[ཨོ་རྒྱན་དབང་ཕྱུག]](1861&ndash;1926)
 
 [[ar:يوجين وانغشوك]]
-[[dz:ཨོ་རྒྱན་དབང་ཕྱུག]]
+[[en: Ugyen Wangchuck]]
 [[de:Ugyen Wangchuk]]
 [[et:Ugyen Wangchuck]]
 [[fr:Ugyen Wangchuk]]
