--- a/ཟླུམ་བརྩེགས་ལྷ་ཁང.mw
+++ b/ཟླུམ་བརྩེགས་ལྷ་ཁང.mw
@@ -1,1 +1,1 @@
-[[ཟླུམ་བརྩེགས་ལྷ་ཁང|སྤ་རོ་གྱང་ས་ཟླུམ་བརྩེགས་ལྷ་ཁང]]
+[[ཟླུམ་བརྩེགས་ལྷ་ཁང|གྱང་ས་ཟླུམ་བརྩེགས་ལྷ་ཁང་]]འདི་ སྤ་རོ་ཚོང་འདུས་ཁྲོམ་ལས་ རྫོང་ནང་འགྱོ་སའི་སྣུམ་འཁོར་ལམ་བདའ་སྟེ་
