*Empty MediaWiki Message*

--- a/ཟླུམ་བརྩེགས་ལྷ་ཁང.mw
+++ b/ཟླུམ་བརྩེགས་ལྷ་ཁང.mw
@@ -1,1 +1,2 @@
 [[ཟླུམ་བརྩེགས་ལྷ་ཁང|གྱང་ས་ཟླུམ་བརྩེགས་ལྷ་ཁང་]]འདི་ སྤ་རོ་ཚོང་འདུས་ཁྲོམ་ལས་ རྫོང་ནང་འགྱོ་སའི་སྣུམ་འཁོར་ལམ་བདའ་སྟེ་
+[[Image:Image:Dungtsi_Lhakhang_Stupa-Paro-Bhutan-2007_11_11.JPG|thumb|180px|right|གྱང་ས་ཟླུམ་བརྩེགས་ལྷ་ཁང]]
