*Empty MediaWiki Message*

--- a/ཐང་སྟོང་རྒྱལ་པོ.mw
+++ b/ཐང་སྟོང་རྒྱལ་པོ.mw
@@ -1,3 +1,2 @@
 
-
-Gerner, Manfred : [http://www.bhutanstudies.org.bt/admin/pubFiles/Chakzampa.pdf  Chakzampa Thangtong Gyalpo: Philosopher and Iron Chain Bridge Builder]
+མཛད་པ་པོ:Gerner, Manfred. མིང:[http://www.bhutanstudies.org.bt/admin/pubFiles/Chakzampa.pdf  Chakzampa Thangtong Gyalpo: Philosopher and Iron Chain Bridge Builder]
