*Empty MediaWiki Message*

--- a/ཐང་སྟོང་རྒྱལ་པོ.mw
+++ b/ཐང་སྟོང་རྒྱལ་པོ.mw
@@ -1,3 +1,7 @@
 ==འབྲེལ་གཏུགས==
 
 མཛད་པ་པོ:Gerner, Manfred. མིང:[http://www.bhutanstudies.org.bt/admin/pubFiles/Chakzampa.pdf  Chakzampa Thangtong Gyalpo: Philosopher and Iron Chain Bridge Builder]
+
+
+==འབྲེལ་མཐུད== 
+[http://www.rigpawiki.org/index.php?title=Thangtong_Gyalpo Thangtong Gyalpo]
