--- a/ཐང་སྟོང་རྒྱལ་པོ.mw
+++ b/ཐང་སྟོང་རྒྱལ་པོ.mw
@@ -4,4 +4,4 @@
 
 
 ==འབྲེལ་མཐུད== 
-[http://www.rigpawiki.org/index.php?title=Thangtong_Gyalpo Thangtong Gyalpo]
+[http://www.rigpawiki.org/index.php?title=Thangtong_Gyalpo Thangtong Gyalpo (ཐང་སྟོང་རྒྱལ་པོ)]
