--- a/ཐང་སྟོང་རྒྱལ་པོ.mw
+++ b/ཐང་སྟོང་རྒྱལ་པོ.mw
@@ -5,4 +5,7 @@
 * : Gerner, Manfred;  ''Title:'' Chakzampa Thangtong Gyalpo [ISBN 99936-14-39-4] - [http://www.bhutanstudies.org.bt/main/pub_detail.php?pubid=101 Download PDF version from the Centre for Bhutan Studies]
 
 ==འབྲེལ་མཐུད== 
-[http://www.rigpawiki.org/index.php?title=Thangtong_Gyalpo Thangtong Gyalpo (ཐང་སྟོང་རྒྱལ་པོ)]
+* [http://tbrc.org/link?RID=P2778 TBRC P2778 ཐང་སྟོང་རྒྱལ་པོ] - ནང་བསྟན་དཔེ་ཚོཊ་ལྟེ་གནས
+* [http://rywiki.tsadra.org/index.php/Thangtong_Gyalpo Thangtong Gyalpo (ཐང་སྟོང་རྒྱལ་པོ)] - རང་འབྱུང་ཡེ་ཤེས་ཝི་ཀི
+* [http://www.rigpawiki.org/index.php?title=Thangtong_Gyalpo Thangtong Gyalpo (ཐང་སྟོང་རྒྱལ་པོ)] - རིག་པ་ཝི་ཀི
+* [http://www.himalayanart.org/search/set.cfm?setID=311|Teacher: བླ་མ་ཐང་སྟོང་རྒྱལ་པོ] - ཧི་མ་ལ་ཡན་གྱི་ ལག་རྩལ་འབྱུང་ཁུངས
