*Empty MediaWiki Message*

--- a/ཐང་སྟོང་རྒྱལ་པོ.mw
+++ b/ཐང་སྟོང་རྒྱལ་པོ.mw
@@ -1,4 +1,10 @@
+[1361?-1485]
 ==འབྲེལ་གཏུགས==
+==== ====
+
+* མཛད་པ་པོ: ཤེས་རབ་དཔལ་ལྡན; མིང: རྗེ་གྲུབ་ཐོབ་ཆེན་པོ་ལྕགས་ཟམ་པའི་རྣམ་པར་ཐར་པ་ངོ་ཚར་རྒྱ་མཚོ།   
+* མཛད་པ་པོ: [[lo chen 'gyur med bde chen]] [1540-1615] ; ''Title:''grub pa'i dban phyug chen po lcags zam pa than ston rgyal po'i rnam thar no mtshar kun gsal nor bu'i me long gsar pa'' [http://tbrc.org/link?RID=W23929 TBRC W23929]
+
 
 ====དབྱིན་སྐད====
 * མཛད་པ་པོ:  Stearns, Cyrus; མིང: King of The Empty Plan: ''The Tibetan Iron Bridge Builder Tangtong Gyalpo'' [ISBN 978-1559392754] 
